# AI-Wildlife-Tracker

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.frontend  EVALUATION_REPORT.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements-frontend.txt  requirements.txt
.github/workflows/: ci.yml
config/: retrieval.yaml  species_list.yaml
data/: README.md
data/chunks/: all_chunks.json  chunking_stats.json  species_without_chunks.json  validation_report.json
data/processed/: all_species.json  birds.json  cleaning_stats.json  mammals.json  unknown.json
notebooks/: eda.ipynb
prompts/: v1.yaml
scripts/: add_essential_species.py  convert_to_onnx.py  demo.py  setup.py
src/api/: feedback.py  main.py  middleware.py  models.py  routes.py
src/evaluation/: benchmark_queries.py  embedding_comparison.py  evaluator.py  golden_dataset.py  llm_comparison.py  metrics.py  optimization_experiments.py  ragas_evaluator.py
src/frontend/: app.py  dashboard.py
src/ingestion/: gbif_collector.py  inaturalist_collector.py  wikipedia_scraper.py
src/monitoring/: alerts.py  feedback_loop.py  logging_config.py  metrics_collector.py  tracing.py
src/preprocessing/: chunker.py  cleaner.py  validator.py
src/rag/: generator.py  onnx_reranker.py  pipeline.py  reranker.py  vision.py
src/retrieval/: bm25_index.py  build_indexes.py  embedder.py  hybrid_search.py  onnx_embedder.py  query_expander.py
tests/: test_api.py  test_evaluation.py  test_integration.py  test_monitoring.py  test_pipeline_e2e.py
